--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.4",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
